--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "lighthouse",
+    "lighthouse-plugin",
+    "seo",
+    "headings",
+    "h1",
+    "h2"
+  ],
   "author": "Michael Kozhevnikov",
   "license": "MIT",
   "type": "commonjs",
@@ -15,5 +22,13 @@
   },
   "devDependencies": {
     "lighthouse": "^12.0.0"
-  }
+  },          
+  "repository": {           
+    "type": "git",
+    "url": "https://github.com/aktaumag/lighthouse-plugin-headings.git"
+  },
+  "files": [                
+    "plugin.js",
+    "audits/"
+  ]
 }
